minor update. add some information

--- a/main_report.html
+++ b/main_report.html
@@ -128,6 +128,12 @@ div.csl-indent {
 </section>
 <section id="data" class="level1">
 <h1>Data</h1>
+<p>Data-data yang digunakan dalam kajian ini adalah:</p>
+<ol type="1">
+<li>Data pengukuran topografi lapangan</li>
+<li>Data hujan Stasiun Rahadi Oesman selama 20 Tahun</li>
+<li>Data tutupan lahan dari KLHK</li>
+</ol>
 </section>
 <section id="metode-studi" class="level1">
 <h1>Metode Studi</h1>
