adding yaml option to change the caption text. from "figure" to "gambar", from "table" to "tabel".

--- a/main_report.html
+++ b/main_report.html
@@ -89,6 +89,7 @@ div.csl-indent {
 <link href="main_report_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 
 
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body class="fullcontent">
@@ -128,9 +129,14 @@ div.csl-indent {
 </section>
 <section id="ketersediaan-data" class="level1" data-number="2">
 <h1 data-number="2"><span class="header-section-number">2</span> Ketersediaan Data</h1>
-<p>Untuk melakukan kajian bebas banjir ini diperlukan data-data primer maupun sekunder yang dikumpulkan untuk kemudian diolah dan dianalisis sehingga menghasilkan informasi yang memadai sebagai dasar dari laporan hidrologi. Data primer didapatkan dari pengambilan data langsung di lapangan saat tahap pekerjaan lapangan berlangsung, sedangkan data sekunder didapatkan dari sumber lain yang telah ada sebelumnya. Rangkuman data yang digunakan pada penelitian ini baik primer maupun sekunder adalah sebagai berikut:</p>
+<p>Untuk melakukan kajian bebas banjir ini diperlukan data-data primer maupun sekunder yang dikumpulkan untuk kemudian diolah dan dianalisis sehingga menghasilkan informasi yang memadai sebagai dasar dari laporan hidrologi. Data primer didapatkan dari pengambilan data langsung di lapangan saat tahap pekerjaan lapangan berlangsung, sedangkan data sekunder didapatkan dari sumber lain yang telah ada sebelumnya. Rangkuman data yang digunakan pada penelitian ini baik primer maupun sekunder ditampilkan dalam <a href="#tbl-data" class="quarto-xref">Tabel&nbsp;1</a> berikut:</p>
+<div id="tbl-data" class="quarto-float anchored">
+<figure class="quarto-float quarto-float-tbl figure">
+<figcaption class="quarto-float-caption-top quarto-float-caption quarto-float-tbl" id="tbl-data-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Tabel&nbsp;1: Rangkuman Data Yang Digunakan Pada Kajian Ini
+</figcaption>
+<div aria-describedby="tbl-data-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <table class="table">
-<caption>Rangkuman Data Yang Digunakan Pada Kajian Ini</caption>
 <colgroup>
 <col style="width: 6%">
 <col style="width: 44%">
@@ -178,15 +184,22 @@ div.csl-indent {
 </tr>
 </tbody>
 </table>
+</div>
+</figure>
+</div>
 </section>
 <section id="catchment-area-ca" class="level1" data-number="3">
 <h1 data-number="3"><span class="header-section-number">3</span> <em>Catchment Area</em> (CA)</h1>
 <p>Untuk dapat menghitung debit banjir, diperlukan 2 (dua) inputan data utama. Input yang pertama adalah karakteristik dari catchment area (CA) yang ditinjau seperti luasan, panjang sungai, dan kemiringan sungai. Kemudian input kedua yang diperlukan adalah curah hujan rencana.</p>
-<p>Untuk data karakteristik CA diperoleh dari deliniasi peta rupa bumi Indonesia (RBI). Hasil deliniasi menunjukkan terdapat satu CA di sekitar tapak proyek dengan luasan 32.01 Ha.</p>
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="figures/ca.png" class="img-fluid figure-img" width="563"></p>
-<figcaption>Peta Catchment Area</figcaption>
+<p>Untuk data karakteristik CA diperoleh dari deliniasi peta rupa bumi Indonesia (RBI). Hasil deliniasi menunjukkan terdapat satu CA di sekitar tapak proyek dengan luasan 32.01 Ha. Gambar CA dapat dilihat pada <a href="#fig-ca" class="quarto-xref">Gambar&nbsp;1</a> dibawah ini.</p>
+<div id="fig-ca" class="quarto-figure quarto-figure-center quarto-float anchored" data-fig-align="center">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-ca-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="figures/ca.png" class="img-fluid quarto-figure quarto-figure-center figure-img" width="563">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-ca-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Gambar&nbsp;1: Peta Catchment Area
+</figcaption>
 </figure>
 </div>
 </section>
@@ -194,11 +207,15 @@ div.csl-indent {
 <h1 data-number="4"><span class="header-section-number">4</span> Data dan Analisa Curah Hujan</h1>
 <section id="kondisi-curah-hujan" class="level2" data-number="4.1">
 <h2 data-number="4.1" class="anchored" data-anchor-id="kondisi-curah-hujan"><span class="header-section-number">4.1</span> Kondisi Curah Hujan</h2>
-<p>Data hujan yang digunakan mempunyai panjang waktu pengamatan selama 20 Tahun dari tahun 2002hingga tahun 2023 yang bersumber pada , berlokasi ±3.4 Km dari lokasi pekerjaan (Gambar 2). Berikut ditampilkan lokasi dan data curah hujan maksimum harian serta jumlah curah hujan bulanan rata-rata berupa tabel dan grafik pada stasiun tersebut.</p>
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="figures/ca_sta_hujan.png" class="img-fluid figure-img"></p>
-<figcaption>Lokasi Stasiun Hujan Terhadap Lokasi Proyek</figcaption>
+<p>Data hujan yang digunakan mempunyai panjang waktu pengamatan selama 20 Tahun dari tahun 2002hingga tahun 2023 yang bersumber pada , berlokasi ±3.4 Km dari lokasi pekerjaan ( <a href="#fig-stahujan" class="quarto-xref">Gambar&nbsp;2</a> ). Berikut ditampilkan lokasi dan data curah hujan maksimum harian serta jumlah curah hujan bulanan rata-rata berupa tabel dan grafik pada stasiun tersebut.</p>
+<div id="fig-stahujan" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-stahujan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="figures/ca_sta_hujan.png" class="img-fluid figure-img">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-stahujan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Gambar&nbsp;2: Lokasi Stasiun Hujan Terhadap Lokasi Proyek
+</figcaption>
 </figure>
 </div>
 </section>
@@ -236,12 +253,12 @@ div.csl-indent {
 <section id="analisa-hidrolika" class="level1" data-number="6">
 <h1 data-number="6"><span class="header-section-number">6</span> Analisa Hidrolika</h1>
 </section>
-<section id="daftar-pustaka" class="level1 unnumbered" data-number="7">
+<section id="daftar-pustaka" class="level1 unnumbered">
 
 
 </section>
 
-<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">7 Daftar Pustaka</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">Daftar Pustaka</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
 <div id="ref-permenpuprnomor12/prt/m/2014" class="csl-entry" role="listitem">
 Permen PUPR Nomor 12/PRT/M/2014. 2014. <span>“Permen PUPR Nomor 12/PRT/m/2014 Tentang Penyelenggaran Sistem Drainase Perkotaan.”</span>
 </div>
