adding equation on Normal and Log Normal distribution

--- a/main_report.html
+++ b/main_report.html
@@ -265,25 +265,49 @@ Gambar&nbsp;2: Lokasi Stasiun Hujan Terhadap Lokasi Proyek
 <section id="distribusi-normal" class="level3" data-number="5.2.1">
 <h3 data-number="5.2.1" class="anchored" data-anchor-id="distribusi-normal"><span class="header-section-number">5.2.1</span> Distribusi Normal</h3>
 <p>Distribusi normal adalah simetris terhadap sumbu vertikal dan berbentuk lonceng yang juga disebut distribusi Gauss. Distribusi normal mempunyai dua parameter yaitu rata-rata µ dan deviasi standar s dari populasi. Dalam praktek, nilai rata-rata <span class="math inline">\(\hat{x}\)</span> dan deviasi standar <em>s</em> diturunkan dari data sampel untuk menggantikan µ dan s. Persamaan distribusi normal adalah sebagai berikut:</p>
+<p><span class="math display">\[
+\displaylines{
+\mathrm{X}_{T}^{}=\overline{X}+S.K \\
+\overline{X}=\frac{1}{n}\sum_{i=1}^{n}.X{i} \\
+S=\sqrt{\frac{\sum_{i=1}^{n}(X{i}-\overline{X})^{2}}{n-1}} \\
+}
+\]</span></p>
+<p>dimana :</p>
+<p>X<sub>T</sub> = Kedalaman hujan untuk periode ulang T tahun (mm).</p>
+<p>T =Periode ulang (tahun).</p>
+<p><span class="math inline">\(\overline{X}\)</span> = Kedalaman hujan rata-rata (mm).</p>
+<p>n = Jumlah data.</p>
+<p>S = Standar deviasi (mm).</p>
+<p>K = Faktor dari Tabel Z distribusi normal</p>
 </section>
 <section id="distribusi-log-normal" class="level3" data-number="5.2.2">
 <h3 data-number="5.2.2" class="anchored" data-anchor-id="distribusi-log-normal"><span class="header-section-number">5.2.2</span> Distribusi Log-Normal</h3>
 <p>Untuk frekuensi hujan yang mengikuti distribusi Log-normal, kedalaman hujan periode ulang T dapat ditentukan sebagai berikut:</p>
-</section>
-<section id="distribusi-log-pearson-iii" class="level3" data-number="5.2.3">
-<h3 data-number="5.2.3" class="anchored" data-anchor-id="distribusi-log-pearson-iii"><span class="header-section-number">5.2.3</span> Distribusi Log Pearson III</h3>
+<p><span class="math display">\[
+\displaylines{
+L_{n}X_{t}=\overline{L_{n}X}+S_{LnXi}K_{T} \\\overline{L_{n}X}=\frac{1}n{L_{n}X_{i}} \\S_{LnXi}=\sqrt{\frac{\sum_{i=n}^{n}(L_{n}X_{i})^2}{n-1}}
+}
+\]</span></p>
+<p>dimana :</p>
+<p>LnX<sub>T</sub> = Kedalaman hujan untuk periode ulang T tahun (mm).</p>
+<p>T =Periode ulang (tahun).</p>
+<p><span class="math inline">\(\overline{LnX}\)</span> = Kedalaman hujan rata-rata (mm).</p>
+<p>n = Jumlah data.</p>
+<p><span class="math inline">\(S_{LnXi}\)</span> = Standar deviasi dari Log Xi (mm).</p>
+<p>KT = Faktor dari Tabel Z distribusi normal</p>
+<p>Distribusi Log Pearson III</p>
 <p>Jika distribusi frekuensi hujan mengikuti distribusi Log-Pearson Tipe III, maka kedalaman hujan periode ulang T dapat ditentukan sebagai berikut:</p>
 </section>
-<section id="distribusi-gumbel" class="level3" data-number="5.2.4">
-<h3 data-number="5.2.4" class="anchored" data-anchor-id="distribusi-gumbel"><span class="header-section-number">5.2.4</span> Distribusi Gumbel</h3>
+<section id="distribusi-gumbel" class="level3" data-number="5.2.3">
+<h3 data-number="5.2.3" class="anchored" data-anchor-id="distribusi-gumbel"><span class="header-section-number">5.2.3</span> Distribusi Gumbel</h3>
 <p>Jika distribusi frekuensi hujan mengikuti distribusi Gumbel, maka kedalaman hujan periode ulang T dapat ditentukan sebagai berikut:</p>
 </section>
-<section id="ringkasan-analisa-desain-curah-hujan" class="level3" data-number="5.2.5">
-<h3 data-number="5.2.5" class="anchored" data-anchor-id="ringkasan-analisa-desain-curah-hujan"><span class="header-section-number">5.2.5</span> Ringkasan Analisa Desain Curah Hujan</h3>
+<section id="ringkasan-analisa-desain-curah-hujan" class="level3" data-number="5.2.4">
+<h3 data-number="5.2.4" class="anchored" data-anchor-id="ringkasan-analisa-desain-curah-hujan"><span class="header-section-number">5.2.4</span> Ringkasan Analisa Desain Curah Hujan</h3>
 <p>Rekapitulasi Hasil perhitungan distribusi curah hujan rencana untuk perioda ulang 2, 5, 10, 25, 50, 100, 200 dan 1000&nbsp; tahun dengan berbagai metode dapat dilihat pada Tabel dan Gambar Berikut.</p>
 </section>
-<section id="penentuan-distribusi-hujan" class="level3" data-number="5.2.6">
-<h3 data-number="5.2.6" class="anchored" data-anchor-id="penentuan-distribusi-hujan"><span class="header-section-number">5.2.6</span> Penentuan Distribusi Hujan</h3>
+<section id="penentuan-distribusi-hujan" class="level3" data-number="5.2.5">
+<h3 data-number="5.2.5" class="anchored" data-anchor-id="penentuan-distribusi-hujan"><span class="header-section-number">5.2.5</span> Penentuan Distribusi Hujan</h3>
 <p>Selanjutnya setelah dilakukan analisa frekuensi dilakukan uji kesesuaian distribusi yang dimaksudkan untuk mengetahui kebenaran analisa curah hujan baik terhadap simpangan data vertikal ataupun simpangan data horisontal.</p>
 <p>Uji kesesuaian distribusi frekuensi digunakan untuk menguji apakah pemilihan distribusi yang digunakan dalam perhitungan curah hujan rencana diterima atau ditolak, maka perlu dilakukan uji kesesuaian distribusi baik secara statistik maupun simpangan terkecil. Untuk uji simpangan digunakan metode Chi Square dan metode Smirnov Kolmogorof.</p>
 </section>
@@ -300,7 +324,7 @@ Gambar&nbsp;2: Lokasi Stasiun Hujan Terhadap Lokasi Proyek
 <h1 data-number="6"><span class="header-section-number">6</span> Analisa Debit Banjir</h1>
 <section id="bagan-alir-perhitungan-debit-banjir" class="level2" data-number="6.1">
 <h2 data-number="6.1" class="anchored" data-anchor-id="bagan-alir-perhitungan-debit-banjir"><span class="header-section-number">6.1</span> Bagan Alir Perhitungan Debit Banjir</h2>
-<p>Berdasarkan SNI 2415-2016 tentang "Tata Cara Perhitungan Debit Banjir Rencana", bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;3</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
+<p>Berdasarkan SNI 2415-2016 tentang “Tata Cara Perhitungan Debit Banjir Rencana”, bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;3</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
 <div id="fig-bagan_alir" class="quarto-figure quarto-figure-center quarto-float anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-bagan_alir-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
