update latex equation

--- a/main_report.html
+++ b/main_report.html
@@ -121,10 +121,46 @@ window.Quarto = {
 <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="fullcontent">
+<body>
 
-<div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
-
+<div id="quarto-content" class="page-columns page-rows-contents page-layout-article toc-left">
+<div id="quarto-sidebar-toc-left" class="sidebar toc-left">
+  <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Daftar Isi</h2>
+   
+  <ul>
+  <li><a href="#umum" id="toc-umum" class="nav-link active" data-scroll-target="#umum"><span class="header-section-number">1</span> Umum</a></li>
+  <li><a href="#kriteria-desain-dan-aturan-terkait" id="toc-kriteria-desain-dan-aturan-terkait" class="nav-link" data-scroll-target="#kriteria-desain-dan-aturan-terkait"><span class="header-section-number">2</span> Kriteria Desain dan Aturan Terkait</a></li>
+  <li><a href="#ketersediaan-data" id="toc-ketersediaan-data" class="nav-link" data-scroll-target="#ketersediaan-data"><span class="header-section-number">3</span> Ketersediaan Data</a></li>
+  <li><a href="#catchment-area-ca" id="toc-catchment-area-ca" class="nav-link" data-scroll-target="#catchment-area-ca"><span class="header-section-number">4</span> <em>Catchment Area</em> (CA)</a></li>
+  <li><a href="#data-dan-analisa-curah-hujan" id="toc-data-dan-analisa-curah-hujan" class="nav-link" data-scroll-target="#data-dan-analisa-curah-hujan"><span class="header-section-number">5</span> Data dan Analisa Curah Hujan</a>
+  <ul class="collapse">
+  <li><a href="#kondisi-curah-hujan" id="toc-kondisi-curah-hujan" class="nav-link" data-scroll-target="#kondisi-curah-hujan"><span class="header-section-number">5.1</span> Kondisi Curah Hujan</a></li>
+  <li><a href="#analisa-frekuensi" id="toc-analisa-frekuensi" class="nav-link" data-scroll-target="#analisa-frekuensi"><span class="header-section-number">5.2</span> Analisa Frekuensi</a>
+  <ul class="collapse">
+  <li><a href="#distribusi-normal" id="toc-distribusi-normal" class="nav-link" data-scroll-target="#distribusi-normal"><span class="header-section-number">5.2.1</span> Distribusi Normal</a></li>
+  <li><a href="#distribusi-log-normal" id="toc-distribusi-log-normal" class="nav-link" data-scroll-target="#distribusi-log-normal"><span class="header-section-number">5.2.2</span> Distribusi Log-Normal</a></li>
+  <li><a href="#distribusi-log-pearson-iii" id="toc-distribusi-log-pearson-iii" class="nav-link" data-scroll-target="#distribusi-log-pearson-iii"><span class="header-section-number">5.2.3</span> Distribusi Log Pearson III</a></li>
+  <li><a href="#distribusi-gumbel" id="toc-distribusi-gumbel" class="nav-link" data-scroll-target="#distribusi-gumbel"><span class="header-section-number">5.2.4</span> Distribusi Gumbel</a></li>
+  <li><a href="#ringkasan-analisa-desain-curah-hujan" id="toc-ringkasan-analisa-desain-curah-hujan" class="nav-link" data-scroll-target="#ringkasan-analisa-desain-curah-hujan"><span class="header-section-number">5.2.5</span> Ringkasan Analisa Desain Curah Hujan</a></li>
+  <li><a href="#penentuan-distribusi-hujan" id="toc-penentuan-distribusi-hujan" class="nav-link" data-scroll-target="#penentuan-distribusi-hujan"><span class="header-section-number">5.2.6</span> Penentuan Distribusi Hujan</a></li>
+  </ul></li>
+  <li><a href="#koefisien-pengaliran" id="toc-koefisien-pengaliran" class="nav-link" data-scroll-target="#koefisien-pengaliran"><span class="header-section-number">5.3</span> Koefisien Pengaliran</a></li>
+  <li><a href="#hujan-efektif" id="toc-hujan-efektif" class="nav-link" data-scroll-target="#hujan-efektif"><span class="header-section-number">5.4</span> Hujan Efektif</a></li>
+  </ul></li>
+  <li><a href="#analisa-debit-banjir" id="toc-analisa-debit-banjir" class="nav-link" data-scroll-target="#analisa-debit-banjir"><span class="header-section-number">6</span> Analisa Debit Banjir</a>
+  <ul class="collapse">
+  <li><a href="#bagan-alir-perhitungan-debit-banjir" id="toc-bagan-alir-perhitungan-debit-banjir" class="nav-link" data-scroll-target="#bagan-alir-perhitungan-debit-banjir"><span class="header-section-number">6.1</span> Bagan Alir Perhitungan Debit Banjir</a></li>
+  <li><a href="#debit-banjir-di-lokasi-proyek" id="toc-debit-banjir-di-lokasi-proyek" class="nav-link" data-scroll-target="#debit-banjir-di-lokasi-proyek"><span class="header-section-number">6.2</span> Debit Banjir di Lokasi Proyek</a></li>
+  <li><a href="#debit-banjir-di-sungai-tengar" id="toc-debit-banjir-di-sungai-tengar" class="nav-link" data-scroll-target="#debit-banjir-di-sungai-tengar"><span class="header-section-number">6.3</span> Debit Banjir di Sungai Tengar</a></li>
+  </ul></li>
+  <li><a href="#analisa-hidrolika" id="toc-analisa-hidrolika" class="nav-link" data-scroll-target="#analisa-hidrolika"><span class="header-section-number">7</span> Analisa Hidrolika</a></li>
+  <li><a href="#daftar-pustaka" id="toc-daftar-pustaka" class="nav-link" data-scroll-target="#daftar-pustaka">Daftar Pustaka</a></li>
+  </ul>
+</nav>
+</div>
+<div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+</div>
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
@@ -295,19 +331,52 @@ L_{n}X_{t}=\overline{L_{n}X}+S_{LnXi}K_{T} \\\overline{L_{n}X}=\frac{1}n{L_{n}X_
 <p>n = Jumlah data.</p>
 <p><span class="math inline">\(S_{LnXi}\)</span> = Standar deviasi dari Log Xi (mm).</p>
 <p>KT = Faktor dari Tabel Z distribusi normal</p>
-<p>Distribusi Log Pearson III</p>
+</section>
+<section id="distribusi-log-pearson-iii" class="level3" data-number="5.2.3">
+<h3 data-number="5.2.3" class="anchored" data-anchor-id="distribusi-log-pearson-iii"><span class="header-section-number">5.2.3</span> Distribusi Log Pearson III</h3>
 <p>Jika distribusi frekuensi hujan mengikuti distribusi Log-Pearson Tipe III, maka kedalaman hujan periode ulang T dapat ditentukan sebagai berikut:</p>
+<p><span class="math display">\[
+\displaylines{
+L_{n}X_{t}=\overline{L_{n}X}+S_{LnXi}G \\\overline{L_{n}X}=\frac{1}n{L_{n}X_{i}} \\S_{LnXi}=\sqrt{\frac{\sum_{i=n}^{n}(L_{n}X_{i})^2}{n-1}}
+\\G=f(C_{s},T)
+\\C_{s}=\frac{n\sum_{i=n}^{n}(L_{n}X_{i}-\overline{L_{n}X})^3}{(n-1)(n-2)S_{LnXi^3}}
+}
+\]</span> dimana :</p>
+<p>LnX<sub>T</sub> = log Kedalaman hujan untuk periode ulang T tahun (mm).</p>
+<p>T =Periode ulang (tahun).</p>
+<p><span class="math inline">\(\overline{LnX}\)</span> = Kedalaman hujan rata-rata (mm).</p>
+<p>n = Jumlah data.</p>
+<p><span class="math inline">\(S_{LnXi}\)</span> = Standar deviasi dari Log Xi (mm).</p>
+<p>G = Faktor frekuensi</p>
+<p><span class="math inline">\(C_{s}\)</span> = koefisien kemencengan data Log X<sub>i</sub></p>
 </section>
-<section id="distribusi-gumbel" class="level3" data-number="5.2.3">
-<h3 data-number="5.2.3" class="anchored" data-anchor-id="distribusi-gumbel"><span class="header-section-number">5.2.3</span> Distribusi Gumbel</h3>
+<section id="distribusi-gumbel" class="level3" data-number="5.2.4">
+<h3 data-number="5.2.4" class="anchored" data-anchor-id="distribusi-gumbel"><span class="header-section-number">5.2.4</span> Distribusi Gumbel</h3>
 <p>Jika distribusi frekuensi hujan mengikuti distribusi Gumbel, maka kedalaman hujan periode ulang T dapat ditentukan sebagai berikut:</p>
+<p><span class="math display">\[ \displaylines{
+\mathrm{X}_{T}^{}=\overline{X}+S.K
+\\ \overline{X}=\frac{1}{n}\sum_{i=1}^{n}.X{i}
+\\ S=\sqrt{\frac{\sum_{i=1}^{n}(X{i}-\overline{X})^{2}}{n-1}}
+\\ K=\frac{Y_{T}-Y_{n}}{S_{n}}
+\\ Y_{T}=-l_{n}(-ln\frac{T-1}{T})
+} \]</span></p>
+<p>dimana :</p>
+<p>X<sub>T</sub> = Kedalaman hujan untuk periode ulang T tahun (mm).</p>
+<p>T =Periode ulang (tahun).</p>
+<p><span class="math inline">\(\overline{X}\)</span> = Kedalaman hujan rata-rata (mm).</p>
+<p>n = Jumlah data.</p>
+<p>S = Standar deviasi (mm).</p>
+<p>K = Faktor frekuensi</p>
+<p>YT = Reduced variate</p>
+<p>Yn = Reduced mean (sebagai fungsi dari banyaknya data n)</p>
+<p>Sn = Reduced standard deviation (sebagai fungsi dari banyaknya data n)</p>
 </section>
-<section id="ringkasan-analisa-desain-curah-hujan" class="level3" data-number="5.2.4">
-<h3 data-number="5.2.4" class="anchored" data-anchor-id="ringkasan-analisa-desain-curah-hujan"><span class="header-section-number">5.2.4</span> Ringkasan Analisa Desain Curah Hujan</h3>
+<section id="ringkasan-analisa-desain-curah-hujan" class="level3" data-number="5.2.5">
+<h3 data-number="5.2.5" class="anchored" data-anchor-id="ringkasan-analisa-desain-curah-hujan"><span class="header-section-number">5.2.5</span> Ringkasan Analisa Desain Curah Hujan</h3>
 <p>Rekapitulasi Hasil perhitungan distribusi curah hujan rencana untuk perioda ulang 2, 5, 10, 25, 50, 100, 200 dan 1000&nbsp; tahun dengan berbagai metode dapat dilihat pada Tabel dan Gambar Berikut.</p>
 </section>
-<section id="penentuan-distribusi-hujan" class="level3" data-number="5.2.5">
-<h3 data-number="5.2.5" class="anchored" data-anchor-id="penentuan-distribusi-hujan"><span class="header-section-number">5.2.5</span> Penentuan Distribusi Hujan</h3>
+<section id="penentuan-distribusi-hujan" class="level3" data-number="5.2.6">
+<h3 data-number="5.2.6" class="anchored" data-anchor-id="penentuan-distribusi-hujan"><span class="header-section-number">5.2.6</span> Penentuan Distribusi Hujan</h3>
 <p>Selanjutnya setelah dilakukan analisa frekuensi dilakukan uji kesesuaian distribusi yang dimaksudkan untuk mengetahui kebenaran analisa curah hujan baik terhadap simpangan data vertikal ataupun simpangan data horisontal.</p>
 <p>Uji kesesuaian distribusi frekuensi digunakan untuk menguji apakah pemilihan distribusi yang digunakan dalam perhitungan curah hujan rencana diterima atau ditolak, maka perlu dilakukan uji kesesuaian distribusi baik secara statistik maupun simpangan terkecil. Untuk uji simpangan digunakan metode Chi Square dan metode Smirnov Kolmogorof.</p>
 </section>
