adding subtitle change the catchment figure

--- a/main_report.html
+++ b/main_report.html
@@ -87,6 +87,10 @@ div.csl-indent {
 <script src="main_report_files/libs/bootstrap/bootstrap.min.js"></script>
 <link href="main_report_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="main_report_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="main_report_files/libs/kePrint-0.0.1/kePrint.js"></script>
+
+<link href="main_report_files/libs/lightable-0.0.1/lightable.css" rel="stylesheet">
+
 
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
@@ -166,6 +170,7 @@ window.Quarto = {
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
 <h1 class="title">Kajian Banjir 100 Tahunan Landfill B3 PT. Well Harvest Wining</h1>
+<p class="subtitle lead">Kecamatan Kendawangan, Kabupaten Ketapang, Provinsi Kalimantan Barat.</p>
 </div>
 
 
@@ -214,10 +219,10 @@ Tabel&nbsp;1: Rangkuman Data Yang Digunakan Pada Kajian Ini
 <div aria-describedby="tbl-data-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <table class="table">
 <colgroup>
-<col style="width: 6%">
-<col style="width: 44%">
-<col style="width: 20%">
-<col style="width: 29%">
+<col style="width: 21%">
+<col style="width: 34%">
+<col style="width: 21%">
+<col style="width: 21%">
 </colgroup>
 <thead>
 <tr class="header">
@@ -258,6 +263,12 @@ Tabel&nbsp;1: Rangkuman Data Yang Digunakan Pada Kajian Ini
 <td>Data Sekunder</td>
 <td>KLHK</td>
 </tr>
+<tr class="even">
+<td style="text-align: center;">6</td>
+<td>Data pengamatan pasang surut harian di Sungai Tengar</td>
+<td>Data Primer</td>
+<td>PT. Well Harvest Wining</td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -283,16 +294,57 @@ Gambar&nbsp;1: Peta Catchment Area
 <h1 data-number="5"><span class="header-section-number">5</span> Data dan Analisa Curah Hujan</h1>
 <section id="kondisi-curah-hujan" class="level2" data-number="5.1">
 <h2 data-number="5.1" class="anchored" data-anchor-id="kondisi-curah-hujan"><span class="header-section-number">5.1</span> Kondisi Curah Hujan</h2>
-<p>Data hujan yang digunakan mempunyai panjang waktu pengamatan selama 20 Tahun dari tahun 2002hingga tahun 2023 yang bersumber pada , berlokasi ±3.4 Km dari lokasi pekerjaan ( <a href="#fig-stahujan" class="quarto-xref">Gambar&nbsp;2</a> ). Berikut ditampilkan lokasi dan data curah hujan maksimum harian serta jumlah curah hujan bulanan rata-rata berupa tabel dan grafik pada stasiun tersebut.</p>
-<div id="fig-stahujan" class="quarto-figure quarto-figure-center quarto-float anchored">
-<figure class="quarto-float quarto-float-fig figure">
-<div aria-describedby="fig-stahujan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="figures/ca_sta_hujan.png" class="img-fluid figure-img">
-</div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-stahujan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;2: Lokasi Stasiun Hujan Terhadap Lokasi Proyek
+<p>Data hujan yang digunakan mempunyai panjang waktu pengamatan selama 20 Tahun dari tahun 2002 hingga tahun 2023 yang bersumber pada BMKG. Berikut ditampilkan lokasi dan data curah hujan maksimum harian serta jumlah curah hujan bulanan rata-rata berupa tabel dan grafik pada stasiun tersebut.</p>
+<div class="cell">
+<div id="tbl-data_hujan" class="cell quarto-float anchored">
+<figure class="quarto-float quarto-float-tbl figure">
+<figcaption class="quarto-float-caption-top quarto-float-caption quarto-float-tbl" id="tbl-data_hujan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Tabel&nbsp;2: Data Hujan Maksimum.
 </figcaption>
+<div aria-describedby="tbl-data_hujan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div class="cell-output-display">
+<div>
+<table class="do-not-create-environment cell table table-sm table-striped small" data-quarto-postprocess="true">
+<thead>
+<tr class="header">
+<th style="text-align: left;" data-quarto-table-cell-role="th">date</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">rainfall</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">2004-01-01</td>
+<td style="text-align: right;">0.0</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">2004-01-02</td>
+<td style="text-align: right;">3.8</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">2004-01-03</td>
+<td style="text-align: right;">0.0</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">2004-01-04</td>
+<td style="text-align: right;">1.2</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">2004-01-05</td>
+<td style="text-align: right;">0.0</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">2004-01-06</td>
+<td style="text-align: right;">0.0</td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
+</div>
+</div>
 </figure>
+</div>
 </div>
 </section>
 <section id="analisa-frekuensi" class="level2" data-number="5.2">
@@ -393,14 +445,14 @@ L_{n}X_{t}=\overline{L_{n}X}+S_{LnXi}G \\\overline{L_{n}X}=\frac{1}n{L_{n}X_{i}}
 <h1 data-number="6"><span class="header-section-number">6</span> Analisa Debit Banjir</h1>
 <section id="bagan-alir-perhitungan-debit-banjir" class="level2" data-number="6.1">
 <h2 data-number="6.1" class="anchored" data-anchor-id="bagan-alir-perhitungan-debit-banjir"><span class="header-section-number">6.1</span> Bagan Alir Perhitungan Debit Banjir</h2>
-<p>Berdasarkan SNI 2415-2016 tentang “Tata Cara Perhitungan Debit Banjir Rencana”, bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;3</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
+<p>Berdasarkan SNI 2415-2016 tentang “Tata Cara Perhitungan Debit Banjir Rencana”, bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;2</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
 <div id="fig-bagan_alir" class="quarto-figure quarto-figure-center quarto-float anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-bagan_alir-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/bagan_alir_banjir.png" class="img-fluid quarto-figure quarto-figure-center figure-img">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-bagan_alir-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;3: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 Hal 6)
+Gambar&nbsp;2: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 Hal 6)
 </figcaption>
 </figure>
 </div>
