tambah analisa frekuensi hujan rencana

--- a/main_report.html
+++ b/main_report.html
@@ -376,6 +376,48 @@ L_{n}X_{t}=\overline{L_{n}X}+S_{LnXi}G \\\overline{L_{n}X}=\frac{1}n{L_{n}X_{i}}
 <section id="ringkasan-analisa-desain-curah-hujan" class="level3" data-number="5.2.5">
 <h3 data-number="5.2.5" class="anchored" data-anchor-id="ringkasan-analisa-desain-curah-hujan"><span class="header-section-number">5.2.5</span> Ringkasan Analisa Desain Curah Hujan</h3>
 <p>Rekapitulasi Hasil perhitungan distribusi curah hujan rencana untuk perioda ulang 2, 5, 10, 25, 50, 100, 200 dan 1000&nbsp; tahun dengan berbagai metode dapat dilihat pada Tabel dan Gambar Berikut.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div id="fig-rainfall-pdf" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-rainfall-pdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="main_report_files/figure-html/fig-rainfall-pdf-1.png" class="img-fluid figure-img" width="672">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-rainfall-pdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Gambar&nbsp;5: Grafik PDF Curah Hujan Harian
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<div id="fig-rainfall-cdf" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-rainfall-cdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="main_report_files/figure-html/fig-rainfall-cdf-1.png" class="img-fluid figure-img" width="672">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-rainfall-cdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Gambar&nbsp;6: Grafik PDF Curah Hujan Harian
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<div id="fig-rainfall-frequency" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-rainfall-frequency-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="main_report_files/figure-html/fig-rainfall-frequency-1.png" class="img-fluid figure-img" width="672">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-rainfall-frequency-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Gambar&nbsp;7: Analisa Frekuensi Curah Hujan Rencana
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
 </section>
 <section id="penentuan-distribusi-hujan" class="level3" data-number="5.2.6">
 <h3 data-number="5.2.6" class="anchored" data-anchor-id="penentuan-distribusi-hujan"><span class="header-section-number">5.2.6</span> Penentuan Distribusi Hujan</h3>
@@ -395,14 +437,14 @@ L_{n}X_{t}=\overline{L_{n}X}+S_{LnXi}G \\\overline{L_{n}X}=\frac{1}n{L_{n}X_{i}}
 <h1 data-number="6"><span class="header-section-number">6</span> Analisa Debit Banjir</h1>
 <section id="bagan-alir-perhitungan-debit-banjir" class="level2" data-number="6.1">
 <h2 data-number="6.1" class="anchored" data-anchor-id="bagan-alir-perhitungan-debit-banjir"><span class="header-section-number">6.1</span> Bagan Alir Perhitungan Debit Banjir</h2>
-<p>Berdasarkan SNI 2415-2016 tentang “Tata Cara Perhitungan Debit Banjir Rencana”, bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;5</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
+<p>Berdasarkan SNI 2415-2016 tentang “Tata Cara Perhitungan Debit Banjir Rencana”, bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;8</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
 <div id="fig-bagan_alir" class="quarto-figure quarto-figure-center quarto-float anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-bagan_alir-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/bagan_alir_banjir.png" class="img-fluid quarto-figure quarto-figure-center figure-img">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-bagan_alir-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;5: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 Hal 6)
+Gambar&nbsp;8: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 Hal 6)
 </figcaption>
 </figure>
 </div>
