--- a/main_report.html
+++ b/main_report.html
@@ -111,7 +111,7 @@ window.Quarto = {
   <li><a href="#ringkasan-analisa-desain-curah-hujan" id="toc-ringkasan-analisa-desain-curah-hujan" class="nav-link" data-scroll-target="#ringkasan-analisa-desain-curah-hujan"><span class="header-section-number">5.2.5</span> Ringkasan Analisa Desain Curah Hujan</a></li>
   <li><a href="#penentuan-distribusi-hujan" id="toc-penentuan-distribusi-hujan" class="nav-link" data-scroll-target="#penentuan-distribusi-hujan"><span class="header-section-number">5.2.6</span> Penentuan Distribusi Hujan</a></li>
   </ul></li>
-  <li><a href="#koefisien-pengaliran" id="toc-koefisien-pengaliran" class="nav-link" data-scroll-target="#koefisien-pengaliran"><span class="header-section-number">5.3</span> Koefisien Pengaliran</a></li>
+  <li><a href="#koefisien-limpasan" id="toc-koefisien-limpasan" class="nav-link" data-scroll-target="#koefisien-limpasan"><span class="header-section-number">5.3</span> Koefisien Limpasan</a></li>
   <li><a href="#hujan-efektif" id="toc-hujan-efektif" class="nav-link" data-scroll-target="#hujan-efektif"><span class="header-section-number">5.4</span> Hujan Efektif</a></li>
   </ul></li>
   <li><a href="#analisa-debit-banjir" id="toc-analisa-debit-banjir" class="nav-link" data-scroll-target="#analisa-debit-banjir"><span class="header-section-number">6</span> Analisa Debit Banjir</a>
@@ -305,23 +305,23 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
 <div aria-describedby="tbl-matrixplot-rainfall-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell-output-display">
 <div>
-<div id="efexwalwbq" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#efexwalwbq table {
+<div id="udknmsruog" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#udknmsruog table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#efexwalwbq thead, #efexwalwbq tbody, #efexwalwbq tfoot, #efexwalwbq tr, #efexwalwbq td, #efexwalwbq th {
+#udknmsruog thead, #udknmsruog tbody, #udknmsruog tfoot, #udknmsruog tr, #udknmsruog td, #udknmsruog th {
   border-style: none;
 }
 
-#efexwalwbq p {
+#udknmsruog p {
   margin: 0;
   padding: 0;
 }
 
-#efexwalwbq .gt_table {
+#udknmsruog .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -347,12 +347,12 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-left-color: #D3D3D3;
 }
 
-#efexwalwbq .gt_caption {
+#udknmsruog .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#efexwalwbq .gt_title {
+#udknmsruog .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -364,7 +364,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-width: 0;
 }
 
-#efexwalwbq .gt_subtitle {
+#udknmsruog .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -376,7 +376,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-top-width: 0;
 }
 
-#efexwalwbq .gt_heading {
+#udknmsruog .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -388,13 +388,13 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#efexwalwbq .gt_bottom_border {
+#udknmsruog .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#efexwalwbq .gt_col_headings {
+#udknmsruog .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -409,7 +409,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#efexwalwbq .gt_col_heading {
+#udknmsruog .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -429,7 +429,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   overflow-x: hidden;
 }
 
-#efexwalwbq .gt_column_spanner_outer {
+#udknmsruog .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -441,15 +441,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 4px;
 }
 
-#efexwalwbq .gt_column_spanner_outer:first-child {
+#udknmsruog .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#efexwalwbq .gt_column_spanner_outer:last-child {
+#udknmsruog .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#efexwalwbq .gt_column_spanner {
+#udknmsruog .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -461,11 +461,11 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   width: 100%;
 }
 
-#efexwalwbq .gt_spanner_row {
+#udknmsruog .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#efexwalwbq .gt_group_heading {
+#udknmsruog .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -491,7 +491,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   text-align: left;
 }
 
-#efexwalwbq .gt_empty_group_heading {
+#udknmsruog .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -506,15 +506,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   vertical-align: middle;
 }
 
-#efexwalwbq .gt_from_md > :first-child {
+#udknmsruog .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#efexwalwbq .gt_from_md > :last-child {
+#udknmsruog .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#efexwalwbq .gt_row {
+#udknmsruog .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -533,7 +533,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   overflow-x: hidden;
 }
 
-#efexwalwbq .gt_stub {
+#udknmsruog .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -546,7 +546,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#efexwalwbq .gt_stub_row_group {
+#udknmsruog .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -560,15 +560,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   vertical-align: top;
 }
 
-#efexwalwbq .gt_row_group_first td {
+#udknmsruog .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#efexwalwbq .gt_row_group_first th {
+#udknmsruog .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#efexwalwbq .gt_summary_row {
+#udknmsruog .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -578,16 +578,16 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#efexwalwbq .gt_first_summary_row {
+#udknmsruog .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#efexwalwbq .gt_first_summary_row.thick {
+#udknmsruog .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#efexwalwbq .gt_last_summary_row {
+#udknmsruog .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -597,7 +597,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#efexwalwbq .gt_grand_summary_row {
+#udknmsruog .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -607,7 +607,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#efexwalwbq .gt_first_grand_summary_row {
+#udknmsruog .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -617,7 +617,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-top-color: #D3D3D3;
 }
 
-#efexwalwbq .gt_last_grand_summary_row_top {
+#udknmsruog .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -627,11 +627,11 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#efexwalwbq .gt_striped {
+#udknmsruog .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#efexwalwbq .gt_table_body {
+#udknmsruog .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -640,7 +640,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#efexwalwbq .gt_footnotes {
+#udknmsruog .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -654,7 +654,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#efexwalwbq .gt_footnote {
+#udknmsruog .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -663,7 +663,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#efexwalwbq .gt_sourcenotes {
+#udknmsruog .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -677,7 +677,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#efexwalwbq .gt_sourcenote {
+#udknmsruog .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -685,63 +685,63 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#efexwalwbq .gt_left {
+#udknmsruog .gt_left {
   text-align: left;
 }
 
-#efexwalwbq .gt_center {
+#udknmsruog .gt_center {
   text-align: center;
 }
 
-#efexwalwbq .gt_right {
+#udknmsruog .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#efexwalwbq .gt_font_normal {
+#udknmsruog .gt_font_normal {
   font-weight: normal;
 }
 
-#efexwalwbq .gt_font_bold {
+#udknmsruog .gt_font_bold {
   font-weight: bold;
 }
 
-#efexwalwbq .gt_font_italic {
+#udknmsruog .gt_font_italic {
   font-style: italic;
 }
 
-#efexwalwbq .gt_super {
+#udknmsruog .gt_super {
   font-size: 65%;
 }
 
-#efexwalwbq .gt_footnote_marks {
+#udknmsruog .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#efexwalwbq .gt_asterisk {
+#udknmsruog .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#efexwalwbq .gt_indent_1 {
+#udknmsruog .gt_indent_1 {
   text-indent: 5px;
 }
 
-#efexwalwbq .gt_indent_2 {
+#udknmsruog .gt_indent_2 {
   text-indent: 10px;
 }
 
-#efexwalwbq .gt_indent_3 {
+#udknmsruog .gt_indent_3 {
   text-indent: 15px;
 }
 
-#efexwalwbq .gt_indent_4 {
+#udknmsruog .gt_indent_4 {
   text-indent: 20px;
 }
 
-#efexwalwbq .gt_indent_5 {
+#udknmsruog .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -1075,7 +1075,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
 </figure>
 </div>
 </div>
-<p>Dari <a href="#tbl-matrixplot-rainfall" class="quarto-xref">Tabel&nbsp;2</a> diatas dapat dilihat bahwa hujan yang paling banyak adalah 810.9 mm.</p>
+<p>Dari <a href="#tbl-matrixplot-rainfall" class="quarto-xref">Tabel&nbsp;2</a> diatas dapat dilihat bahwa hujan yang paling banyak adalah 810.9 mm/bulan.</p>
 </section>
 <section id="analisa-frekuensi" class="level2" data-number="5.2">
 <h2 data-number="5.2" class="anchored" data-anchor-id="analisa-frekuensi"><span class="header-section-number">5.2</span> Analisa Frekuensi</h2>
@@ -1205,9 +1205,29 @@ Gambar&nbsp;7: Analisa Frekuensi Curah Hujan Rencana
 <p>Uji kesesuaian distribusi frekuensi digunakan untuk menguji apakah pemilihan distribusi yang digunakan dalam perhitungan curah hujan rencana diterima atau ditolak, maka perlu dilakukan uji kesesuaian distribusi baik secara statistik maupun simpangan terkecil. Untuk uji simpangan digunakan metode Chi Square dan metode Smirnov Kolmogorof.</p>
 </section>
 </section>
-<section id="koefisien-pengaliran" class="level2" data-number="5.3">
-<h2 data-number="5.3" class="anchored" data-anchor-id="koefisien-pengaliran"><span class="header-section-number">5.3</span> Koefisien Pengaliran</h2>
-<p>Hasil dari curah hujan rencana masih merupakan hujan total, sedangkan untuk menghitung debit banjir diperlukan nilai hujan efektif, artinya sudah dikurangi dengan infiltrasi lahan yang ada. Berbagai macam cara untuk menghitung hujan efektif, pada pekerjaan ini metode yang digunakan adalah metode Koefisien C atau koefisien limpasan. Karena pada lokasi yang ditinjau sebagian besar merpakan area tegalan/ladang, maka diasumsikan masuk dalam kategori daerah lahan tidak terpelihara (lihat <u><strong>==Tabel 19==</strong></u>). Dengan demikian nilai C yang diambil adalah <u><strong>==0.3==</strong></u>.</p>
+<section id="koefisien-limpasan" class="level2" data-number="5.3">
+<h2 data-number="5.3" class="anchored" data-anchor-id="koefisien-limpasan"><span class="header-section-number">5.3</span> Koefisien Limpasan</h2>
+<p>Hasil dari curah hujan rencana masih merupakan hujan total, sedangkan untuk menghitung debit banjir diperlukan nilai hujan efektif, artinya sudah dikurangi dengan infiltrasi lahan yang ada. Berbagai macam cara untuk menghitung hujan efektif, pada pekerjaan ini metode yang digunakan adalah metode Koefisien C atau koefisien limpasan. Karena pada lokasi yang ditinjau sebagian besar merpakan area tegalan/ladang, maka diasumsikan masuk dalam kategori daerah lahan tidak terpelihara (lihat <a href="#tbl-koef_limpasan" class="quarto-xref">Tabel&nbsp;3</a>). Dengan demikian nilai C yang diambil adalah <strong>0.3.</strong></p>
+<div id="tbl-koef_limpasan" class="quarto-float anchored" data-fig-align="center">
+<figure class="quarto-float quarto-float-tbl figure">
+<figcaption class="quarto-float-caption-top quarto-float-caption quarto-float-tbl" id="tbl-koef_limpasan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Tabel&nbsp;3: Nilai Koefisien Limpasan
+</figcaption>
+<div aria-describedby="tbl-koef_limpasan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="figures/koefisien_limpasan.png" class="img-fluid quarto-figure quarto-figure-center figure-img">
+</div>
+</figure>
+</div>
+<div id="fig-tutupan_lahan" class="quarto-figure quarto-figure-center quarto-float anchored" data-fig-align="center">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-tutupan_lahan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="figures/kondisi_tutupan_lahan.jpg" class="img-fluid quarto-figure quarto-figure-center figure-img" width="495">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-tutupan_lahan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Gambar&nbsp;8: Kondisi Tutupan Lahan di Sekitar Tapak Proyek
+</figcaption>
+</figure>
+</div>
 </section>
 <section id="hujan-efektif" class="level2" data-number="5.4">
 <h2 data-number="5.4" class="anchored" data-anchor-id="hujan-efektif"><span class="header-section-number">5.4</span> Hujan Efektif</h2>
@@ -1217,14 +1237,14 @@ Gambar&nbsp;7: Analisa Frekuensi Curah Hujan Rencana
 <h1 data-number="6"><span class="header-section-number">6</span> Analisa Debit Banjir</h1>
 <section id="bagan-alir-perhitungan-debit-banjir" class="level2" data-number="6.1">
 <h2 data-number="6.1" class="anchored" data-anchor-id="bagan-alir-perhitungan-debit-banjir"><span class="header-section-number">6.1</span> Bagan Alir Perhitungan Debit Banjir</h2>
-<p>Berdasarkan SNI 2415-2016 tentang “Tata Cara Perhitungan Debit Banjir Rencana”, bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;8</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
+<p>Berdasarkan SNI 2415-2016 tentang “Tata Cara Perhitungan Debit Banjir Rencana”, bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;9</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
 <div id="fig-bagan_alir" class="quarto-figure quarto-figure-center quarto-float anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-bagan_alir-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/bagan_alir_banjir.png" class="img-fluid quarto-figure quarto-figure-center figure-img">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-bagan_alir-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;8: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 Hal 6)
+Gambar&nbsp;9: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 Hal 6)
 </figcaption>
 </figure>
 </div>
