--- a/main_report.html
+++ b/main_report.html
@@ -284,13 +284,37 @@ Gambar&nbsp;3: Resume Data Hujan
 </div>
 <div class="cell">
 <div class="cell-output-display">
-<div id="fig-matrixplot-rainfall" class="quarto-figure quarto-figure-center quarto-float anchored">
+<div id="fig-matrixplot-rainfall-1" class="quarto-figure quarto-figure-center quarto-float anchored">
 <figure class="quarto-float quarto-float-fig figure">
-<div aria-describedby="fig-matrixplot-rainfall-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div aria-describedby="fig-matrixplot-rainfall-1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="main_report_files/figure-html/fig-matrixplot-rainfall-1.png" class="img-fluid figure-img" width="672">
 </div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-matrixplot-rainfall-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-matrixplot-rainfall-1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Gambar&nbsp;4: Matrixplot Data Hujan Bulanan
+</figcaption>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div id="fig-matrixplot-rainfall-2" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-matrixplot-rainfall-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="main_report_files/figure-html/fig-matrixplot-rainfall-2.png" class="img-fluid figure-img" width="672">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-matrixplot-rainfall-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Gambar&nbsp;5: Matrixplot Data Hujan Bulanan
+</figcaption>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div id="fig-matrixplot-rainfall-3" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-matrixplot-rainfall-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="main_report_files/figure-html/fig-matrixplot-rainfall-3.png" class="img-fluid figure-img" width="672">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-matrixplot-rainfall-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Gambar&nbsp;6: Matrixplot Data Hujan Bulanan
 </figcaption>
 </figure>
 </div>
@@ -305,23 +329,23 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
 <div aria-describedby="tbl-matrixplot-rainfall-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell-output-display">
 <div>
-<div id="udknmsruog" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#udknmsruog table {
+<div id="hycmsmdwgn" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#hycmsmdwgn table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#udknmsruog thead, #udknmsruog tbody, #udknmsruog tfoot, #udknmsruog tr, #udknmsruog td, #udknmsruog th {
+#hycmsmdwgn thead, #hycmsmdwgn tbody, #hycmsmdwgn tfoot, #hycmsmdwgn tr, #hycmsmdwgn td, #hycmsmdwgn th {
   border-style: none;
 }
 
-#udknmsruog p {
+#hycmsmdwgn p {
   margin: 0;
   padding: 0;
 }
 
-#udknmsruog .gt_table {
+#hycmsmdwgn .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -347,12 +371,12 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-left-color: #D3D3D3;
 }
 
-#udknmsruog .gt_caption {
+#hycmsmdwgn .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#udknmsruog .gt_title {
+#hycmsmdwgn .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -364,7 +388,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-width: 0;
 }
 
-#udknmsruog .gt_subtitle {
+#hycmsmdwgn .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -376,7 +400,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-top-width: 0;
 }
 
-#udknmsruog .gt_heading {
+#hycmsmdwgn .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -388,13 +412,13 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#udknmsruog .gt_bottom_border {
+#hycmsmdwgn .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#udknmsruog .gt_col_headings {
+#hycmsmdwgn .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -409,7 +433,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#udknmsruog .gt_col_heading {
+#hycmsmdwgn .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -429,7 +453,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   overflow-x: hidden;
 }
 
-#udknmsruog .gt_column_spanner_outer {
+#hycmsmdwgn .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -441,15 +465,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 4px;
 }
 
-#udknmsruog .gt_column_spanner_outer:first-child {
+#hycmsmdwgn .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#udknmsruog .gt_column_spanner_outer:last-child {
+#hycmsmdwgn .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#udknmsruog .gt_column_spanner {
+#hycmsmdwgn .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -461,11 +485,11 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   width: 100%;
 }
 
-#udknmsruog .gt_spanner_row {
+#hycmsmdwgn .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#udknmsruog .gt_group_heading {
+#hycmsmdwgn .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -491,7 +515,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   text-align: left;
 }
 
-#udknmsruog .gt_empty_group_heading {
+#hycmsmdwgn .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -506,15 +530,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   vertical-align: middle;
 }
 
-#udknmsruog .gt_from_md > :first-child {
+#hycmsmdwgn .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#udknmsruog .gt_from_md > :last-child {
+#hycmsmdwgn .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#udknmsruog .gt_row {
+#hycmsmdwgn .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -533,7 +557,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   overflow-x: hidden;
 }
 
-#udknmsruog .gt_stub {
+#hycmsmdwgn .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -546,7 +570,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#udknmsruog .gt_stub_row_group {
+#hycmsmdwgn .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -560,15 +584,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   vertical-align: top;
 }
 
-#udknmsruog .gt_row_group_first td {
+#hycmsmdwgn .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#udknmsruog .gt_row_group_first th {
+#hycmsmdwgn .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#udknmsruog .gt_summary_row {
+#hycmsmdwgn .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -578,16 +602,16 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#udknmsruog .gt_first_summary_row {
+#hycmsmdwgn .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#udknmsruog .gt_first_summary_row.thick {
+#hycmsmdwgn .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#udknmsruog .gt_last_summary_row {
+#hycmsmdwgn .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -597,7 +621,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#udknmsruog .gt_grand_summary_row {
+#hycmsmdwgn .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -607,7 +631,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#udknmsruog .gt_first_grand_summary_row {
+#hycmsmdwgn .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -617,7 +641,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-top-color: #D3D3D3;
 }
 
-#udknmsruog .gt_last_grand_summary_row_top {
+#hycmsmdwgn .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -627,11 +651,11 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#udknmsruog .gt_striped {
+#hycmsmdwgn .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#udknmsruog .gt_table_body {
+#hycmsmdwgn .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -640,7 +664,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#udknmsruog .gt_footnotes {
+#hycmsmdwgn .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -654,7 +678,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#udknmsruog .gt_footnote {
+#hycmsmdwgn .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -663,7 +687,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#udknmsruog .gt_sourcenotes {
+#hycmsmdwgn .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -677,7 +701,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#udknmsruog .gt_sourcenote {
+#hycmsmdwgn .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -685,63 +709,63 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#udknmsruog .gt_left {
+#hycmsmdwgn .gt_left {
   text-align: left;
 }
 
-#udknmsruog .gt_center {
+#hycmsmdwgn .gt_center {
   text-align: center;
 }
 
-#udknmsruog .gt_right {
+#hycmsmdwgn .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#udknmsruog .gt_font_normal {
+#hycmsmdwgn .gt_font_normal {
   font-weight: normal;
 }
 
-#udknmsruog .gt_font_bold {
+#hycmsmdwgn .gt_font_bold {
   font-weight: bold;
 }
 
-#udknmsruog .gt_font_italic {
+#hycmsmdwgn .gt_font_italic {
   font-style: italic;
 }
 
-#udknmsruog .gt_super {
+#hycmsmdwgn .gt_super {
   font-size: 65%;
 }
 
-#udknmsruog .gt_footnote_marks {
+#hycmsmdwgn .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#udknmsruog .gt_asterisk {
+#hycmsmdwgn .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#udknmsruog .gt_indent_1 {
+#hycmsmdwgn .gt_indent_1 {
   text-indent: 5px;
 }
 
-#udknmsruog .gt_indent_2 {
+#hycmsmdwgn .gt_indent_2 {
   text-indent: 10px;
 }
 
-#udknmsruog .gt_indent_3 {
+#hycmsmdwgn .gt_indent_3 {
   text-indent: 15px;
 }
 
-#udknmsruog .gt_indent_4 {
+#hycmsmdwgn .gt_indent_4 {
   text-indent: 20px;
 }
 
-#udknmsruog .gt_indent_5 {
+#hycmsmdwgn .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -1164,7 +1188,7 @@ L_{n}X_{t}=\overline{L_{n}X}+S_{LnXi}G \\\overline{L_{n}X}=\frac{1}n{L_{n}X_{i}}
 <img src="main_report_files/figure-html/fig-rainfall-pdf-1.png" class="img-fluid figure-img" width="672">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-rainfall-pdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;5: Grafik PDF Curah Hujan Harian
+Gambar&nbsp;7: Grafik PDF Curah Hujan Harian
 </figcaption>
 </figure>
 </div>
@@ -1178,7 +1202,7 @@ Gambar&nbsp;5: Grafik PDF Curah Hujan Harian
 <img src="main_report_files/figure-html/fig-rainfall-cdf-1.png" class="img-fluid figure-img" width="672">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-rainfall-cdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;6: Grafik PDF Curah Hujan Harian
+Gambar&nbsp;8: Grafik PDF Curah Hujan Harian
 </figcaption>
 </figure>
 </div>
@@ -1192,7 +1216,7 @@ Gambar&nbsp;6: Grafik PDF Curah Hujan Harian
 <img src="main_report_files/figure-html/fig-rainfall-frequency-1.png" class="img-fluid figure-img" width="672">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-rainfall-frequency-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;7: Analisa Frekuensi Curah Hujan Rencana
+Gambar&nbsp;9: Analisa Frekuensi Curah Hujan Rencana
 </figcaption>
 </figure>
 </div>
@@ -1224,7 +1248,7 @@ Tabel&nbsp;3: Nilai Koefisien Limpasan
 <img src="figures/kondisi_tutupan_lahan.jpg" class="img-fluid quarto-figure quarto-figure-center figure-img" width="495">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-tutupan_lahan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;8: Kondisi Tutupan Lahan di Sekitar Tapak Proyek
+Gambar&nbsp;10: Kondisi Tutupan Lahan di Sekitar Tapak Proyek
 </figcaption>
 </figure>
 </div>
@@ -1237,14 +1261,14 @@ Gambar&nbsp;8: Kondisi Tutupan Lahan di Sekitar Tapak Proyek
 <h1 data-number="6"><span class="header-section-number">6</span> Analisa Debit Banjir</h1>
 <section id="bagan-alir-perhitungan-debit-banjir" class="level2" data-number="6.1">
 <h2 data-number="6.1" class="anchored" data-anchor-id="bagan-alir-perhitungan-debit-banjir"><span class="header-section-number">6.1</span> Bagan Alir Perhitungan Debit Banjir</h2>
-<p>Berdasarkan SNI 2415-2016 tentang “Tata Cara Perhitungan Debit Banjir Rencana”, bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;9</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
+<p>Berdasarkan SNI 2415-2016 tentang “Tata Cara Perhitungan Debit Banjir Rencana”, bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;11</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
 <div id="fig-bagan_alir" class="quarto-figure quarto-figure-center quarto-float anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-bagan_alir-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/bagan_alir_banjir.png" class="img-fluid quarto-figure quarto-figure-center figure-img">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-bagan_alir-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;9: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 Hal 6)
+Gambar&nbsp;11: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 Hal 6)
 </figcaption>
 </figure>
 </div>
